--- a/src/web/css/final_page.css
+++ b/src/web/css/final_page.css
@@ -1,37 +1,19 @@
-
-html,
-body {
-  height: 100%;
+.dot {
+    margin-top: 8px;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    display: inline-block;
 }
 
-body {
-  display: flex;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
+.green {
+    background-color: green;
 }
 
-main {
-  width: 100%;
-  padding: 15px;
-  margin: auto;
-  font-size: large;
+.red {
+    background-color: red;
 }
 
-.thumb1 { 
-    background: url(doodad.png) 50% 50% no-repeat; /* 50% 50% centers image in div */
-    width: 250px;
-    height: 250px;
+.orange {
+    background-color: orange;
 }
-
-.thumb1 a {
-    display: block;
-    width: 250px;
-    height: 250px;
-  }
-
-.dinline {
-  display: inline
-}
-  
